--- a/src/scss/gamer.scss
+++ b/src/scss/gamer.scss
@@ -4,11 +4,8 @@
   }
 
   h1 {
-    margin: 0 10px 20px 10px;
-    font-size: 1.2em;
     @media #{$large-up} {
-      margin: 0 0 15px 0;
-      font-size: 2em;
+      margin: 0 0 5px 0;
     }
   }
 }
