--- a/src/scss/page.scss
+++ b/src/scss/page.scss
@@ -85,6 +85,15 @@ a {
   }
 }
 
+h1 {
+  margin: 0 10px 10px 10px;
+  font-size: 1.3em;
+  @media #{$medium-up} {
+    margin: 0 0 10px 0;
+    font-size: 1.8em;
+  }
+}
+
 .container {
   max-width: $site-width;
   margin: 0 auto;
