--- a/src/scss/studio.scss
+++ b/src/scss/studio.scss
@@ -4,12 +4,7 @@
   }
 
   h1 {
-    margin: 0 10px 20px 10px;
-    font-size: 1.2em;
-    @media #{$large-up} {
-      margin: 0 0 15px 0;
-      font-size: 2em;
-    }
+    margin-bottom: 5px;
   }
 }
 
